# opensqt_market_maker

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  comment_resolution_report.txt  config.example.yaml  docker-compose.grpc.yml  docker-compose.yml  go.mod  go.work  go.work.sum  main.go  main.py  pyproject.toml  report.txt  resolution_report.md
docs/: deployment.md
exchange/: factory.go  types.go  wrapper_binance.go  wrapper_bitget.go  wrapper_gate.go
market_maker/: .gitignore  Dockerfile  Dockerfile.exchange_connector  Makefile  buf.gen.yaml  buf.yaml  go.mod  go.sum  schema.hcl
monitor/: price_monitor.go
order/: executor_adapter.go
position/: super_position_manager.go
python-connector/: Dockerfile  main.py  pyproject.toml  pytest.ini  requirements.txt
python_connector/: Dockerfile  main.py  requirements.txt
safety/: order_cleaner.go  reconciler.go  risk_monitor.go  safety.go
scripts/: audit_branches.sh  audit_commit_authors.sh  check_identity.sh  cleanup_branches.sh  manage_branches.sh
tests/: audit_branches_test.sh  manage_branches_test.sh
todos/: 001-completed-p1-implement-real-margin-simulation.md  002-done-p1-implement-batch-order-execution-go.md  003-resolved-p1-fix-python-numerical-precision.md  004-completed-p1-sql-precision-persistence.md  005-completed-p3-robust-grpc-decorator.md  006-resolved-p3-agent-service-exposure.md  007-done-p3-go-batch-cancel.md  009-completed-p2-parallelize-portfolio-rebalance.md  010-completed-p2-implement-scanner-caching.md  032-pending-p2-grid-quality-perf.md  (+46 more)
(+482 files in other folders)
