[project]
name = "opensqt-market-maker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiodns>=4.0.0",
    "aiohttp>=3.13.3",
    "asyncio>=4.0.0",
    "ccxt>=4.5.34",
    "grpcio>=1.76.0",
    "grpcio-health-checking>=1.76.0",
    "grpcio-tools>=1.76.0",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "protobuf>=6.33.4",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]
